--- a/12-ppv.Rmd
+++ b/12-ppv.Rmd
@@ -171,6 +171,7 @@ $$
 \begin{align}
 PPV &= \frac{(1 - \beta)(OR)}{(1 - \beta)(OR) + \alpha}\\
 &= \frac{(1 - \beta)(\frac{P(\text{effect})}{P(\text{no effect})})}{(1 - \beta)(\frac{P(\text{effect})}{P(\text{no effect})}) + \alpha}\\
+&= \frac{(.30)(\frac{.400}{.600})}{(.30)(\frac{.400}{.600}) + \alpha}\\
 &= \frac{(.30)(0.6666667)}{(.30)(0.6666667) + .05}\\
 &= \frac{.20}{.20 + .05}\\
 &= 0.80\\
