--- a/12-ppv.Rmd
+++ b/12-ppv.Rmd
@@ -188,7 +188,7 @@ $$
 You may, or may not, have noticed something familiar when we started working with the square as means of describing the numbers required for the positive predictive value calculation. Specifically, the square is very similar to the standard 2 x 2 table used to represents Type I Errors (false positives) and Type II Errors (false negatives). In Figure \@ref(fig:ppvfig9) I've placed a colour coded version of this table so that you can see the similarities with the calculation approach used above.
 
 
-```{r ppvfig9, echo = FALSE, out.width = "90%", fig.cap = "Table illustrating Type I (false positives) and Type II Errors (false negatives)."}
+```{r ppvfig9, echo = FALSE, out.width = "90%", fig.cap = "Table illustrating conclusion errors."}
 knitr::include_graphics("ch_ppv/images/fig9.png")
 ```
 
