--- a/14-tools.Rmd
+++ b/14-tools.Rmd
@@ -2,7 +2,7 @@
 
 ## statcheck
 
-One concern associated with the replicability crisis is that the numbers reported in published articles are simply wrong. The numbers could be wrong due to typos or due to deliberate alteration (to ensure *p* < .05). Interestingly, one study decided to check if the *p*-values published in articles were correct [@nuijten2016prevalence]. The authors checked the articles using the software [statcheck](https://cran.r-project.org/package=statcheck). You can think of statcheck as a statistical spell checker that independently recreates the *p*-values in an article and checks if the reported *p*-value is correct. The authors used this process on over 250,000 *p*-values reported in eight major journals between 1985 and 2013. They found that roughly 50% of journal articles had a least one major reporting error. Moreover, one in eight journal articles had a reporting error sufficiently large that it likely altered the conclusions of the paper. Note that incorrect p-values reported were typically smaller than they should been such that the incorrectly reported p-value was less than .05. That's quite a large number of studies with incorrect *p*-values! 
+One concern associated with the replicability crisis is that the numbers reported in published articles are simply wrong. The numbers could be wrong due to typos or due to deliberate alteration (to ensure *p* < .05). Interestingly, one study decided to check if the *p*-values published in articles were correct [@nuijten2016prevalence]. The authors checked the articles using the software [statcheck](https://cran.r-project.org/package=statcheck). You can think of statcheck as a statistical spell checker that independently recreates the *p*-values in an article and checks if the reported *p*-value is correct. The authors used this process on over 250,000 *p*-values reported in eight major journals between 1985 and 2013. They found that roughly 50% of journal articles had a least one  reporting error. Moreover, one in eight journal articles had a reporting error sufficiently large that it likely altered the conclusions of the paper. Note that incorrect *p*-values reported were typically smaller than they should been such that the incorrectly reported *p*-value was less than .05. That's quite a large number of studies with incorrect *p*-values! 
 
 ### statcheck software
 
@@ -15,6 +15,13 @@ The statcheck website is easy to use. Just upload your PDF or Word document and 
 ```{r, echo = FALSE, out.width = "60%"}
 knitr::include_graphics("ch_tools/images/statcheck_website.png")
 ```
+
+You can see the first few rows of the statcheck output for an article below:
+
+```{r, echo = FALSE, out.width = "60%"}
+knitr::include_graphics("ch_tools/images/statcheck_output.png")
+```
+
 
 ### statcheck and Word
 
@@ -39,16 +46,16 @@ Although there were some initial concerns about the validity of statcheck, subse
 
 ## rmarkdown / bookdown
 
-One approach to avoiding errors in your article/thesis is to create a dynamic document. In this type of document you do not type the numbers into the document but rather you conduct the analyses and the number are inserted into the text. The exciting part of this type of document is that you can write a single syntax file and produce a number documents from it such as PDF, Word, Power Point, HTML - as illustrated in the diagram below.
+One approach to avoiding errors in your article/thesis is to create a dynamic document. In this type of document you do not type the numbers into the document. Rather the document contains your analysis script (hidden from readers) and it inserts the calculated values into the text of the document. The exciting part of this type of document is that a single rmarkdown document and produce a number output formats such as PDF, Word, Power Point, HTML - as illustrated in the diagram below.
 
 ```{r, echo = FALSE, out.width = "60%", cap = "apaTables paper header"}
 knitr::include_graphics("ch_tools/images/rmarkdown_docs.png")
 ```
 
 
-You can learn more about rmarkdown in this [video](https://vimeo.com/178485416). I suggest you read the official [documentation](https://rmarkdown.rstudio.com/lesson-1.html) to get started. 
+You can learn more about rmarkdown in this [video](https://vimeo.com/178485416). I suggest you read the official [documentation](https://rmarkdown.rstudio.com/lesson-1.html) to get started. Incidently, the PDF course assignments are made with rmardown - as well as this website!
 
-Also see:
+Some other great resources:
 
 * [R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/)
 
@@ -89,16 +96,38 @@ knitr::include_graphics("ch_tools/images/apaTables_paper.png")
 
 ## retractcheck
 
-[@madlock2015lack]
-
-https://link.springer.com/article/10.1007/s11948-014-9532-1
+As you write-up your research you need to be concerned with the problem of citing research papers that have been retracted. This problem is substantially larger than you might first expect; indeed, one group of researchers found that retracted papers often received the majority their citations **after** retraction [@madlock2015lack]. Therefore, take the extra time to confirm the papers you cite have not been retracted!
 
 
 ```{r, echo = FALSE, out.width = "60%", cap = "apaTables paper header"}
 knitr::include_graphics("ch_tools/images/retract_impact.png")
 ```
 
-[retractcheck](https://cran.r-project.org/package=retractcheck)
+But how do you go about determining if a paper has been retracted? There are website you can check like (retraction watch)[https://retractionwatch.com]. It can, however, be time consuming to check for every article in this website. 
+
+An easier approach is use the [http://openretractions.com](http://openretractions.com) website where you type in the DOI number from an article and it checks if that article has been retracted. Even better, you can use the [retractcheck](https://cran.r-project.org/package=retractcheck) R package. With this package you can check large batches of DOI numbers to see if the corresponding articles have been retracted.
+
+
+### DOI
+
+What is a DOI number? All modern journal articles have a DOI (digital object identifier) number associated with them. This is a unique number that identifies the article and can be used to access the document.
+
+You can see a DOI number on a PDF:
+
+```{r, echo = FALSE, out.width = "60%", cap = "DOI number on a PDF"}
+knitr::include_graphics("ch_tools/images/doi_pdf.png")
+```
+
+Or you can see a DOI number on the website:
+
+```{r, echo = FALSE, out.width = "60%", cap = "DOI number on a website"}
+knitr::include_graphics("ch_tools/images/doi_website.png")
+```
+
+
+### retractcheck website
+
+
 
 
 
