--- a/14-tools.Rmd
+++ b/14-tools.Rmd
@@ -142,7 +142,11 @@ knitr::include_graphics("ch_tools/images/openretractions.png")
 
 ### Retraction package
 
-Even better, you can use the [retractcheck](https://cran.r-project.org/package=retractcheck) R package. With this package you can check large batches of DOI numbers with openretractions.com to see if the corresponding articles have been retracted.
+Even better, you can use the [retractcheck](https://cran.r-project.org/package=retractcheck) R package. With this package you can check large batches of DOI numbers with openretractions.com to see if the corresponding articles have been retracted. You can use this package by the command line or via the [website](https://frederikaust.shinyapps.io/retractcheck_shinyapp/) illustrated below.
+
+```{r, echo = FALSE, out.width = "60%", cap = "Open retractions website"}
+knitr::include_graphics("ch_tools/images/retractcheck_website.png")
+```
 
 
 
