--- a/14-tools.Rmd
+++ b/14-tools.Rmd
@@ -123,8 +123,8 @@ knitr::include_graphics("ch_tools/images/doi_website.png")
 ```
 
 
-### Retractions websites
 
+### retractiondatabase.org
 
 If you don't have the DOI number for an article you can search for it at [http://retractiondatabase.org](http://retractiondatabase.org). The interface is illustrated below.
 
@@ -133,6 +133,8 @@ knitr::include_graphics("ch_tools/images/retractiondb.png")
 ```
 
  
+### openretractions.com
+
 However, if you have the DOI number for an article, an easier approach is use the [http://openretractions.com](http://openretractions.com) website. At this website you type in the DOI number for an article and it checks if that article has been retracted.
 
 ```{r, echo = FALSE, out.width = "60%", cap = "Open retractions website"}
@@ -140,7 +142,7 @@ knitr::include_graphics("ch_tools/images/openretractions.png")
 ```
 
 
-### Retraction package
+### retractcheck
 
 Even better, you can use the [retractcheck](https://cran.r-project.org/package=retractcheck) R package. With this package you can check large batches of DOI numbers with openretractions.com to see if the corresponding articles have been retracted. You can use this package by the command line or via the [website](https://frederikaust.shinyapps.io/retractcheck_shinyapp/) illustrated below.
 
