--- a/14-tools.Rmd
+++ b/14-tools.Rmd
@@ -10,7 +10,7 @@ Fortunately, you can use statcheck on your own work before submitting it to an a
 
 ### statcheck website
 
-The statcheck website is easy to use. Just upload your PDF or Word document and it will perform the statcheck scan to determine if the numbers in your papers are correct / internally consistent.
+The statcheck website is easy to use. Just upload your PDF or Word document and it will perform the statcheck scan to determine if the numbers in your papers are correct / internally consistent. You can try it out with the PDF of a published article.
 
 ```{r, echo = FALSE, out.width = "60%"}
 knitr::include_graphics("ch_tools/images/statcheck_website.png")
